# ox

./: CMakeLists.txt  README.md  README_EDITOR.md
code/: ox_core.h  ox_ecs.c  ox_ecs.h  ox_entrypoint.c  ox_list.c  ox_list.h  ox_log.c  ox_log.h  ox_mem.c  ox_mem.h  ox_memory.c  ox_memory.h  ox_render.c  ox_render.h  ox_ui.h
editor/: main.c  ox_editor.c  ox_editor.h  ox_editor_components.c  ox_editor_components.h  ox_editor_hierarchy.c  ox_editor_main.c  ox_editor_properties.c  ox_editor_scene.c  ox_editor_scene.h  ox_editor_viewport.c  ox_editor_window.c
